# vanillanoprop

./: .gitignore  Cargo.toml  LICENSE  README.md  backprop_config.toml  build.rs  elmo_config.toml  lcm_config.toml  mobilenet_config.toml  noprop_config.toml  resnet_config.toml  rnn_config.toml  run.sh  self_adapt_config.toml  treepo_config.toml  zero_shot_safe_config.toml
.github/workflows/: rust.yml
benches/: linear.rs  mask_topk.rs  matmul.rs  softmax_ce.rs  tensor_add.rs  tensor_matmul.rs
c_src/: kai_matmul.c  kai_matmul.h
configs/: autoencoder.toml  autograd_custom_layer.toml  hf_vlm.toml  lcm_config.toml  load_config.toml  mixture_of_experts.toml  mnist_gan.toml  mnist_vgg.toml  mobilenet_config.toml  rnn_config.toml  self_adapt_config.toml  sequential_mlp.toml  svd.toml  text_rnn.toml  treepo.toml  zero_shot_safe.toml
docs/: README.md  einfuehrung.md  introduction.md
docs/examples/: autoencoder.md  automl.md  data_loader.md  fine_tuning.md  hf_transformer.md  hf_vlm.md  load_config.md  mixture_of_experts.md  mnist_cnn.md  onnx_export.md  self_adapt_reward.md  smolvlm.md  text_rnn.md  treepo.md  zero_shot_safe.md
examples/: autoencoder.rs  autograd_custom_layer.rs  hf_transformer.rs  hf_vlm.rs  load_config.rs  mixture_of_experts.rs  mnist_cnn.rs  mnist_gan.rs  mnist_vgg.rs  sequential_mlp.rs  smolvlm.rs  svd.rs  text_rnn.rs  text_transformer.rs  treepo.rs  zero_shot_safe.rs
scripts/: plot_metrics.rs  serve_with_ui.sh
src/: attention_t.rs  autograd.rs  automl.rs  config.rs  data.rs  decoder_t.rs  decoding.rs  device.rs  embedding_t.rs  encoder_t.rs  feedforward_t.rs  fine_tune.rs  flow_matching.rs  huggingface.rs  job.rs  lib.rs  linear_t.rs  logging.rs  main.rs  math.rs  memory.rs  metrics.rs  model.rs  positional.rs  predict.rs  rng.rs  tensor.rs  train_backprop.rs  train_cnn.rs  train_elmo.rs  train_fusion.rs  train_noprop.rs  transformer_t.rs  weights.rs
src/data/: audio.rs  dataloader.rs  datasets.rs  mod.rs  text.rs
src/device/: cuda.rs
src/export/: onnx.rs
src/ffi/: kai.rs  mod.rs
src/layers/: conv.rs  dropout.rs  embedding.rs  feed_forward.rs  gated_ffn.rs  layer.rs  leaky_relu.rs  linear.rs  mixture_of_experts.rs  mod.rs  multi_head_attention.rs  normalization.rs  pooling.rs  relu.rs  rms_norm.rs  rnn.rs  sigmoid.rs  softmax.rs  tanh.rs
src/models/: cnn.rs  decoder.rs  encoder.rs  fusion.rs  gan.rs  hybrid_rnn_transformer.rs  large_concept.rs  llama.rs  mobilenet.rs  mod.rs  resnet.rs  rnn.rs  sequential.rs  smolvlm.rs  transformer.rs  vae.rs  vgg.rs
src/optim/: adam.rs  hrm.rs  lr_scheduler.rs  mod.rs  paper_algo.rs  sgd.rs
src/reward/: mod.rs
src/rl/: language_env.rs  mod.rs  self_adapt.rs  treepo.rs  zero_shot_safe.rs
src/tokenizer/: mod.rs
src/util/: logging.rs  mod.rs  progress.rs  simple_logger.rs
tests/: conv.rs  fetch_hf_files.rs  fine_tune.rs  hf_llama_loading.rs  hf_loading.rs  kai_matmul.rs  large_concept.rs  memory.rs  mobilenet.rs  moe_training.rs  onnx_layers.rs  self_adapt.rs  smolvlm_preprocess.rs  softmax.rs  softmax_ce.rs  svd.rs  tensor_broadcast.rs  tensor_softmax_scalar.rs  treepo.rs
tests/data/tiny_bert/: config.json  reference.json
web-ui/: Cargo.toml  index.html
web-ui/src/: main.rs
