[package]
name = "vanillanoprop"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = []
kai = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rand_distr = "0.4"
indicatif = "0.17"
mnist = { version = "0.6", features = ["download"] }
libc = "0.2"
rayon = "1.8"
toml = "0.8"
csv = "1"
nalgebra = { version = "0.27" }

[lib]
name = "vanillanoprop"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "train_backprop"
path = "src/bin/train_backprop.rs"

[[bin]]
name = "train_elmo"
path = "src/bin/train_elmo.rs"

[[bin]]
name = "train_noprop"
path = "src/bin/train_noprop.rs"


[[bin]]
name = "compare"
path = "src/bin/compare.rs"

[[bin]]
name = "plot_metrics"
path = "scripts/plot_metrics.rs"

[[bin]]
name = "train_vae"
path = "src/bin/train_vae.rs"

[[bin]]
name = "sample_vae"
path = "src/bin/sample_vae.rs"

[dev-dependencies]
criterion = "0.5"

[build-dependencies]
cc = "1.0"
glob = "0.3"

[[bench]]
name = "mask_topk"
harness = false

[[bench]]
name = "matmul"
harness = false

[[bench]]
name = "softmax_ce"
harness = false
