[package]
name = "vanillanoprop"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = []
kai = []
matrixmultiply = ["dep:matrixmultiply"]
cuda = ["dep:cust", "dep:nvrtc"]
rayon = []
llama = ["dep:tokenizers"]
vlm = ["dep:image"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rand = "0.8"
rand_distr = "0.4"
indicatif = "0.17"
mnist = { version = "0.6", features = ["download"] }
cifar_10_loader = "0.2"
libc = "0.2"
log = "0.4"
env_logger = "0.11"
rayon = "1.8"
toml = "0.8"
csv = "1"
nalgebra = { version = "0.34" }
onnx-pb = "0.1"
prost = "0.6"
hf-hub = "0.4"
ureq = "2"
safetensors = "0.6"
ndarray = { version = "0.15", features = ["rayon"] }
matrixmultiply = { version = "0.3", optional = true }
cust = { version = "0.3", optional = true }
nvrtc = { version = "0.1", optional = true }
wide = "0.7"
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
actix-files = "0.6"
tokenizers = { version = "0.15", optional = true }
image = { version = "0.24", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_System_ProcessStatus", "Win32_System_Threading"] }

[lib]
name = "vanillanoprop"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "train_backprop"
path = "src/bin/train_backprop.rs"

[[bin]]
name = "train_elmo"
path = "src/bin/train_elmo.rs"

[[bin]]
name = "train_noprop"
path = "src/bin/train_noprop.rs"


[[bin]]
name = "compare"
path = "src/bin/compare.rs"

[[bin]]
name = "plot_metrics"
path = "scripts/plot_metrics.rs"

[[bin]]
name = "train_vae"
path = "src/bin/train_vae.rs"

[[bin]]
name = "sample_vae"
path = "src/bin/sample_vae.rs"

[[bin]]
name = "web_server"
path = "src/bin/web_server.rs"

[[bin]]
name = "train_self_adapt"
path = "src/bin/train_self_adapt.rs"

[[example]]
name = "smolvlm"
path = "examples/smolvlm.rs"
required-features = ["vlm"]

[dev-dependencies]
criterion = "0.5"

[build-dependencies]
cc = "1.0"
glob = "0.3"

[[bench]]
name = "mask_topk"
harness = false

[[bench]]
name = "matmul"
harness = false

[[bench]]
name = "softmax_ce"
harness = false

[[bench]]
name = "tensor_add"
harness = false

[[bench]]
name = "linear"
harness = false
